# ebookatty

./: .editorconfig  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  a.txt  alt.py  file.json  freeze  package.json  requirements.txt  setup.cfg  setup.py  start.py  test.py
docs/: ebookatty.__init__.md  ebookatty.atty.md  ebookatty.epubmeta.md  ebookatty.kindlemeta.md  ebookatty.mobimeta.md  ebookatty.standards.md  ebookatty.utils.md  overview.md  standards.md  utils.md
ebook_meta/: __init__.py  epubmeta.py  kindlemeta.py  mobimeta.py  pybook_metadata.py  standards.py  utils.py
ebookatty/: __init__.py  __main__.py  atty.py  cli.py  epub.py  epubmeta.py  kindlemeta.py  metadata.py  mobi.py  mobimeta.py  standards.py  utils.py
ebookmeta/: __init__.py  ebookmeta.py  epubmeta.py  kindlemeta.py  mobimeta.py  standards.py  utils.py
pybook_metadata/: __init__.py  epubmeta.py  kindlemeta.py  mobimeta.py  pybook_metadata.py  utils.py
src/: __init__.py  ebook-metadata-cli.py  ebook_metadata.py  ebookmeta-cli.py  epubmeta.py  kindlemeta.py  mobimeta.py  pybook_metadata.py  utils.py
tests/: test_ebook_metadata.py  test_ebookatty.py  test_ebookmetadata.py  test_epubmeta.py  test_kindlemeta.py  test_mobimeta.py
tests/outdir/: outfile.json
tests/testbooks/: 12 Rules for Life - An Antidote to Chaos by Jordan B. Peterson.azw3  7 Day Startup_ You Don_t Learn Until You Launch_ The - Norris_ Dan.epub  A Dummies Guide to Cryptocurrenies - Peter Aldred.azw3  A Philosophy of Software Design - John Ousterhout.epub  Beyond Good and Evil by Friedrich Wilhelm Nietzsche.mobi  Elements of Euclid - John Casey and Euclid.epub  Romeo and Juliet - William Shakespeare.mobi  The Republic - Plato.mobi  The-Hacker's-Dictionary.azw3  The-Kama-Sutra-of-Vatsayayana.epub  The-New-Hacker's-Dictionary.azw3  test_book.mobi
