[metadata]
name = ebook-metadata
version = 0.2.0
summary = Tool for extracting metadata from common ebook formats
long_description = file: README.md
long_description_content_type = text/markdown
author = alexpdev
url = https://github.com/alexpdev/pybook_metadata
author-email = alexpdev@protonmail.com
license = GNU LGPL v3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir = pybook_metadata
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pybook_metadata
[files]
packages = pybook_metadata
