[metadata]
name = ebookatty
summary = Tool for extracting metadata from common ebook formats
long_description = file: README.md
long_description_content_type = text/markdown
author = alexpdev
url = https://github.com/alexpdev/ebookatty
author_email = alexpdev@protonmail.com
license = GNU LGPL v3

[egg_info]
tag_build = .dev1
tag_svn_revision = false
