[metadata]
name = ebookatty
summary = Tool for extracting metadata from common ebook formats
long_description = file: README.md
long_description_content_type = text/markdown
author = alexpdev
url = https://github.com/alexpdev/ebookatty
author_email = alexpdev@protonmail.com
license = GNU LGPL v3
keywords =
    ebook
    metadata
    mobi
    epub
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 0.1.1
python_requires = >=3.6
setup_requires = setuptools
